--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 
 h1 {
   color: blue;
-  font-size: 3em; 
+  font-size: 3em;
 }
 
 h2 {
@@ -13,7 +13,7 @@ h2 {
 }
 
 .completed {
-  font-family: 12px;
+  font-family: normal;
 }
 
 #tasks .completed {
