--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: pink;
+  background-color: pink;
 
 h1 {
   color: blue;
@@ -8,7 +8,7 @@ h1 {
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
